--- a/Midterm.html
+++ b/Midterm.html
@@ -5,20 +5,24 @@
   	 <title>Portfolio</title>
   	 <link rel="stylesheet" type="text/css" href="Midterm.css"/>
   	 <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
   	 <div id="container">
   	 		<div id="logo">
   	 		<img src="logo.png"></img>
   	 		</div>
-       			<div id="header">       			
-			       	  <span>HOME</span>
-			       	  <span>PORTFOLIO</span>
-			       	  <span>SERVICES</span>
+       			<div id="header-menu">
+
+			       	  <a href="home">HOME</a>
+			       	  <a href="portfolio">PORTFOLIO</a>
+			       	  <a href="services">SERVICES</a>
 			    </div>
        	<div id="text">
-       		<h1>My name is Roberto. Welcome to my portfolio.<br>
-                I am a Freelance Graphic and Web Designer.
+       		<h1>My name is Roberto. Welcome to my portfolio.
+            <br>
+                <span style="font-weight:700;">
+              I am a Freelance Graphic and Web Designer.</span>
              </h1>
 
 
