--- a/Midterm.html
+++ b/Midterm.html
@@ -5,30 +5,74 @@
   	 <title>Portfolio</title>
   	 <link rel="stylesheet" type="text/css" href="Midterm.css"/>
   	 <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
-
   </head>
   <body>
-  	 <div id="container">
-  	 		<div id="logo">
-  	 		<img src="logo.png"></img>
-  	 		</div>
-       			<div id="header-menu">
+     <div id="mobile_menu_wrapper">
+       <div id="line">
+          <span style="width:3em; height:3.5em; float:right; padding-left:.5em; padding-top:.5em;">
+            <a onclick="toggle_visibility('mobile_menu');">
+              <img src="threelinesmenu.png"></img>
+            </a>
+          </span>
+      </div>
+    </div>
+      <div id="mobile_logo">
+          <a class="logo" href="Midterm.html">
+            <img src="logo.png">
+          </a>
+      </div>
+<div id="mobile_menu" style="display:block;">
+  <nav>
+    <ul>
+      <li>
+        <a herf="Midterm.html">HOME</a>
+      </li>
+    </ul>
+    </nav>
+  </div>
 
-			       	  <a href="home">HOME</a>
-			       	  <a href="portfolio">PORTFOLIO</a>
-			       	  <a href="services">SERVICES</a>
-			    </div>
-       	<div id="text">
-       		<h1>My name is Roberto. Welcome to my portfolio.
-            <br>
-                <span style="font-weight:700;">
-              I am a Freelance Graphic and Web Designer.</span>
-             </h1>
-
-
-
-
-
-
-     </div> 
+<div id="wrapper">
+    	 <div id="container">
+    	 		<div id="logo">
+             <a href"Midterm.html">
+    	 		      <img src="logo.png"></img>
+             </a>
+    	 	  </div>
+          <div id="header-menu">
+  			       	  <a href="home">HOME</a>
+  			       	  <a href="portfolio">PORTFOLIO</a>
+  			       	  <a href="services">SERVICES</a>
+  			 </div>
+         	    <div id="text">
+               		 <h1>ROBERTO CABRERA</h1>
+                      <p class="tagline">
+                      Graphic Artist • Web Designer</p>
+               </div> 
+      </div>
+          <div class="container1">
+                <div class="portfolio">  
+                 <div class="block img-right">              
+                    <div class="col 1of2">
+                        <h2>
+                          IL NASO WINE STORE AND BRANDING PACKAGING<br>
+                          <p>Il NASO is an educational wine concept that teaches and guides you throughout your wine shopping experi- ence. We have weekly wine tastings, where you will learn the basics of how to recognize key characteristics, like if a bottle is corked. Additionally, in store we have food and wine pairing guides and a private room devot- ed to a diversity of wine-related classes, spirits tutorials, and wine and food events.</p>
+                          <p>For this company I have to fashion their main logo and everything that is incorporated with their marketing and branding strategy, including their stationary design and the vision of their events and showcases. Also, for the events I am responsible for designing a wine box to place various wine bottles inside to be given out as gifts.
+                          </p>
+                        </h2>
+                      </div>
+                        <div class="col size1of2">
+                          <img src="ilnaso.png"></img>
+                        </div>
+                    </div>
+                </div>
+              </div>
+          <div id="container3">
+               <div class="footer">
+                    646.305.167*</br>
+                    Roberto Cabrera</br>
+                    Graphic and Web Designer<br>
+                    Copy Wright 2014
+              </div>
+          </div>
+    </div>
   </body>
